# llm-prompt-injection-firewall

./: .env  Dockerfile  README.md  docker-compose.yml  firewall.db  pyproject.toml  requirements.txt  test_firewall.db  test_firewall_integration.db
app/: main.py
app/api/: dashboard_api.py
app/dashboard/: routes.py
app/database/: connection.py
app/detection/: __init__.py  base.py  direct.py  encoding.py  extraction.py  indirect.py  jailbreak.py
app/heuristics/: __init__.py  entropy.py  statistics.py
app/middleware/: firewall.py
app/models/: database.py  schemas.py
app/sanitization/: sanitizers.py
app/scoring/: engine.py
app/static/css/: styles.css
app/static/js/: dashboard.js
app/templates/: base.html  index.html  login.html  settings.html  test.html
app/utils/: auth.py  limiter.py  logger.py
config/: prometheus.yml  settings.py
docs/: accuracy_report.md  architecture.md  threat_model.md
sample_attacks/: attacks.json
tests/: conftest.py  run_benchmark.py  test_api.py  test_detection.py  test_firewall_integration.py  test_heuristics.py  test_sanitization.py  test_scoring.py
