[project]
name = "llm-prompt-injection-firewall"
version = "1.0.0"
description = "A secure gateway for detecting, scoring, and blocking prompt injection attacks."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    "python-dotenv>=1.0.1",
    "prometheus-client>=0.20.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
